welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:58: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:61: error: expected start of definition
	override def forward()  {
                 ^Diagonal:64: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:67: error: expected start of definition
	override def backward() {
                 ^Diagonal:70: error: Unmatched closing brace '}' ignored here
}
^